Uploaded image for project: 'Xerces-C++'
  1. Xerces-C++
  2. XERCESC-1377

Error in SAXParser! invalid namespaces

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Blocker
    • Resolution: Fixed
    • 2.6.0
    • 2.7.0
    • SAX/SAX2
    • None
    • Windows XP
      Borland Builder 6

    Description

      <?xml version='1.0' encoding='utf-8'?>
      <root>
      <node1 xmlns="ns1">
      <node2 xmlns="ns2">
      <c1/>
      <node1> <!-- this node must belong to ns2 not to ns1 -->
      <c2/>
      </node1>
      <c3/>
      </node2>
      </node1>
      </root>

      SAXParser tells me that root/node1/node2/node1 has ns1 namespace. it`s not good!!!
      Note that c2 has right ns2 namespace.
      I used version 2.0 and there was no such a bug there.

      If you cant fix it quickly, please tell me how to fix or avoid this bug.

      Attachments

        Activity

          People

            Unassigned Unassigned
            gosaa Vadim Shapovalov
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: