Added comment to state the namespace info wont work with this parser. JIRA #XERCESC-1377

git-svn-id: https://svn.apache.org/repos/asf/xerces/c/trunk@230784 13f79535-47bb-0310-9956-ffa450edef68